[package]
name = "eternalreckoning-core"
version = "0.2.1"
authors = ["Henry Carlson <henry.carlson@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
chrono = "0.4"
failure = "0.1"
failure_derive = "0.1"
fern = "0.5"
lazy_static = "~1.4"
log = "0.4"
nalgebra = "0.19"
serde = { version = "1.0", features = ["derive"] }
specs = "0.15"
toml = "0.5"
tokio = "0.2"
tokio-util = { version = "0.2", features = ["codec", "udp"] }
uuid = "0.8"